--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"
+      charset="utf-8"
+    ></script>
+    <!--  -->
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/fonts/line-awesome-1.3.0/css/line-awesome.min.css"
