--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,20 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"
       charset="utf-8"
     ></script>
+    <script src="%PUBLIC_URL%/assets/js/glide-3.4.1/dist/glide.min.js"></script>
+
     <!--  -->
     <link
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/fonts/line-awesome-1.3.0/css/line-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/js/glide-3.4.1/dist/css/glide.core.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/js/glide-3.4.1/dist/css/glide.theme.min.css"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
     <!--  -->
