--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"
-      charset="utf-8"
-    ></script>
+
+    <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/glide-3.4.1/dist/glide.min.js"></script>
 
     <!--  -->
